--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ ul li {
     background: #eee;
     font-size: 18px;
     transition: 0.2s;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -56,15 +57,16 @@ ul li.checked::before{
 }
 
 .close:hover{
-    background-color: #f44336;
+    background-color: #37769b;
     color: white;
 }
 
 .header {
-    background-color: #f44336;
+    background-color: #37769b;
     padding: 30px 40px;
     color: white;
     text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .header:after {
@@ -84,7 +86,7 @@ input {
 }
 
 .addBtn {
-    padding: 10px;
+    padding: 7px;
     width: 25%;
     background: #d9d9d9;
     color: #555;
